--- a/website/package.json
+++ b/website/package.json
@@ -13,6 +13,7 @@
     "autoprefixer": "^10.4.19",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^6.23.1",
     "react-router-hash-link": "^2.4.3"
   },
